# chess

./: CMakeLists.txt  README.md
chessv2/: Bishop.h  Board.cpp  Board.h  CMakeLists.txt  Color.h  Game.cpp  Game.h  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Queen.h  Rook.h  Square.cpp  Square.h  main.cpp  main.h
client/: CMakeLists.txt  ChessClient.cpp  ChessClient.h  ClientMain.cpp
game/: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h  Square.cpp  Square.h
pieces/: CMakeLists.txt  King.h  Piece.cpp  Piece.h  Rook.h
server/: CMakeLists.txt  ChessServer.cpp  ChessServer.h  ServerMain.cpp
utils/: CMakeLists.txt
